tests/expectations/parser/program/locator_expression_fail.out
Error [EPAR0370005]: expected '=>' -- found '='
    --> test:6:24
     |
   6 |         let a: mapping = relay.aleo/users;
     |                        ^
